--- a/index.html
+++ b/index.html
@@ -10,23 +10,19 @@
 <body>
   <div class="bg"></div>
 
-  <header class="hero">
-    <div class="hero__inner">
-      <h1>פרויקט מסדי נתונים – ספרייה</h1>
-      <p class="subtitle">
-        נתונים נשאבים מה־MySQL דרך API (Node.js) ומתעדכנים לפי מה שקיים במסד הנתונים.
-      </p>
-      <div class="meta">
-        <span class="pill">MySQL</span>
-        <span class="pill">Node.js API</span>
-        <span class="pill">GitHub Pages</span>
-        <span class="pill">Render</span>
-      </div>
-    </div>
-  </header>
+ <header class="hero">
+  <h1>פרויקט מסדי נתונים – ספרייה</h1>
 
-  <main class="container">
-    <div class="grid">
+  <p class="subtitle">
+    נתונים נשאבים מה־MySQL דרך API (Node.js) ומתעדכנים לפי מה שקיים במסד הנתונים
+  </p>
+
+  <div class="meta">
+    <span class="pill">Database: <b>final_project</b></span>
+    <span class="pill">משתתפות: <b>שירה זכרי, הודיה אסתר זכרי</b></span>
+  </div>
+</header>
+
 
       <!-- BOOKS -->
       <section class="card" aria-label="Books Section">
@@ -465,3 +461,4 @@
   </script>
 </body>
 </html>
+
