--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
   <p class="subtitle">
     נתונים נשאבים מה־MySQL דרך API (Node.js) ומתעדכנים לפי מה שקיים במסד הנתונים
   </p>
+      <div class="meta">
+        <span class="pill">MySQL</span>
+        <span class="pill">Node.js API</span>
+        <span class="pill">GitHub Pages</span>
+        <span class="pill">Render</span>
+      </div>
+    </div>
+  </header>
+
+  <main class="container">
+    <div class="grid">
 
   <div class="meta">
     <span class="pill">Database: <b>final_project</b></span>
@@ -461,4 +472,5 @@
   </script>
 </body>
 </html>
+
 
