--- a/index.html
+++ b/index.html
@@ -8,14 +8,12 @@
 </head>
 
 <body>
-  <div class="bg"></div>
-
- <header class="hero">
-  <h1>פרויקט מסדי נתונים – ספרייה</h1>
-
-  <p class="subtitle">
-    נתונים נשאבים מה־MySQL דרך API (Node.js) ומתעדכנים לפי מה שקיים במסד הנתונים
-  </p>
+  <header class="hero">
+    <div class="hero__inner">
+      <h1>פרויקט מסדי נתונים – ספרייה</h1>
+      <p class="subtitle">
+        נתונים נשאבים מה־MySQL דרך API (Node.js) ומתעדכנים לפי מה שקיים במסד הנתונים.
+      </p>
       <div class="meta">
         <span class="pill">MySQL</span>
         <span class="pill">Node.js API</span>
@@ -23,15 +21,10 @@
         <span class="pill">Render</span>
       </div>
     </div>
-     <div class="meta">
-    <span class="pill">Database: <b>final_project</b></span>
-    <span class="pill">משתתפות: <b>שירה זכרי, הודיה אסתר זכרי</b></span>
-  </div>
+  </header>
 
   <main class="container">
     <div class="grid">
-</header>
-
 
       <!-- BOOKS -->
       <section class="card" aria-label="Books Section">
@@ -470,6 +463,7 @@
   </script>
 </body>
 </html>
+
 
 
 
