--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 
 <body>
+  <div class="bg"></div>
+
   <header class="hero">
     <div class="hero__inner">
       <h1>פרויקט מסדי נתונים – ספרייה</h1>
@@ -463,8 +465,3 @@
   </script>
 </body>
 </html>
-
-
-
-
-
